--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.8",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1"
   },
