--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.10.10",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
+    "react-rewards": "^2.1.0",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
